@startuml builder-diagram

title Padrão Builder - Construção Fluente de RelatorioVistoria

' ============================================================
' PRODUTO (RELATORIO VISTORIA)
' ============================================================

class RelatorioVistoria {
    -idVistoria: String
    -tipoVistoria: String
    -veiculo: String
    -cliente: String
    -dataHora: LocalDateTime
    -itensVerificados: List<ItemVistoria>
    -observacoes: String

    +RelatorioVistoria(idVistoria: String, tipoVistoria: String, veiculo: String, cliente: String, dataHora: LocalDateTime, itensVerificados: List<ItemVistoria>, observacoes: String)
    +getIdVistoria(): String
    +getTipoVistoria(): String
    +getVeiculo(): String
    +getCliente(): String
    +getDataHora(): LocalDateTime
    +getItensVerificados(): List<ItemVistoria>
    +getObservacoes(): String
    +getTotalItens(): int
    +getItensQueRequeremAtencao(): List<ItemVistoria>
    +getContagemPorCondicao(): Map<CondicaoItem, Long>
    +temProblemas(): boolean
    +exibir(): void
    +toString(): String
    +{static} builder(): Builder
}

' ============================================================
' BUILDER (INNER CLASS)
' ============================================================

class "RelatorioVistoria.Builder" as Builder {
    -idVistoria: String
    -tipoVistoria: String
    -veiculo: String
    -cliente: String
    -dataHora: LocalDateTime
    -itensVerificados: List<ItemVistoria>
    -observacoes: String

    +Builder()
    +idVistoria(idVistoria: String): Builder
    +tipoVistoria(tipoVistoria: String): Builder
    +veiculo(veiculo: String): Builder
    +cliente(cliente: String): Builder
    +dataHora(dataHora: LocalDateTime): Builder
    +itensVerificados(itens: List<ItemVistoria>): Builder
    +adicionarItem(item: ItemVistoria): Builder
    +adicionarItens(itens: List<ItemVistoria>): Builder
    +limparItens(): Builder
    +observacoes(observacoes: String): Builder
    +build(): RelatorioVistoria
}

' ============================================================
' ITEM VISTORIA (PARTE DO PRODUTO)
' ============================================================

class ItemVistoria {
    -tipo: TipoItemVistoria
    -descricao: String
    -condicao: CondicaoItem
    -observacao: String
    -dataVerificacao: LocalDateTime

    +ItemVistoria(tipo: TipoItemVistoria, descricao: String, condicao: CondicaoItem, observacao: String)
    +ItemVistoria(tipo: TipoItemVistoria, descricao: String, condicao: CondicaoItem)
    +getTipo(): TipoItemVistoria
    +getDescricao(): String
    +getCondicao(): CondicaoItem
    +getObservacao(): String
    +getDataVerificacao(): LocalDateTime
    +temObservacao(): boolean
    +toString(): String
}

' ============================================================
' ENUMERAÇÕES
' ============================================================

enum TipoItemVistoria {
    LATARIA
    MOTOR
    PNEUS
    ILUMINACAO
    SISTEMAS_ELETRONICOS
    ACESSORIOS
    DOCUMENTACAO
    INTERIOR

    +getNome(): String
}

enum CondicaoItem {
    PERFEITO
    BOM
    REGULAR
    DANIFICADO
    CRITICO

    +getNome(): String
    +requerAtencao(): boolean
}

' ============================================================
' RELACIONAMENTOS
' ============================================================

RelatorioVistoria +-- Builder : <<inner class>>
Builder ..> RelatorioVistoria : <<creates>>
RelatorioVistoria "1" o-- "0..*" ItemVistoria : contém
Builder --> ItemVistoria : usa
ItemVistoria --> TipoItemVistoria : usa
ItemVistoria --> CondicaoItem : usa

' ============================================================
' NOTAS EXPLICATIVAS
' ============================================================

note right of Builder
  **Padrão Builder**

  Permite construção fluente e incremental
  de objetos complexos (7 parâmetros).

  **Vantagens:**
  • Legibilidade (nomes dos parâmetros explícitos)
  • Construção incremental de lista de itens
  • Validações centralizadas no build()
  • Parâmetros opcionais com defaults

  **Exemplo de uso:**
  RelatorioVistoria relatorio =
    RelatorioVistoria.builder()
      .idVistoria("V-001")
      .tipoVistoria("ENTRADA")
      .veiculo("Honda Civic")
      .cliente("João Silva")
      .dataHora(LocalDateTime.now())
      .adicionarItem(new ItemVistoria(...))
      .adicionarItem(new ItemVistoria(...))
      .observacoes("Completo")
      .build();
end note

note left of RelatorioVistoria
  **Produto Complexo**

  Classe imutável com:
  • 7 parâmetros obrigatórios
  • Lista de itens (construção incremental)
  • Validações rigorosas
  • Métodos de análise

  **Compatibilidade:**
  Construtor público mantido para
  uso pelo Template Method Pattern
  (ProcessoVistoria)
end note

note bottom of ItemVistoria
  **Item Verificado**

  Representa cada verificação
  realizada durante a vistoria.

  Adicionado incrementalmente
  através do Builder.
end note

' ============================================================
' FLUXO DE CONSTRUÇÃO
' ============================================================

note as N1
  **Fluxo de Construção com Builder:**

  1. RelatorioVistoria.builder() → cria Builder
  2. .idVistoria("...") → define ID (obrigatório)
  3. .tipoVistoria("...") → define tipo (obrigatório)
  4. .veiculo("...") → define veículo (obrigatório)
  5. .cliente("...") → define cliente (obrigatório)
  6. .dataHora(...) → define data/hora (obrigatório)
  7. .adicionarItem(...) → adiciona item (opcional)
  8. .observacoes("...") → define observações (opcional)
  9. .build() → valida e cria RelatorioVistoria
end note

@enduml
